fix(finance): update use rate from currency or user input
Updated to use the exchange provided user, or fallback to the currency
stored in the currency table.
